--- a/C/Makefile
+++ b/C/Makefile
@@ -1,25 +1,29 @@
 CC=gcc
 
 stack-array: src/stack-array.c
-	gcc -o dist/stack-array stack-array.c
+	gcc -o dist/stack-array src/stack-array.c
 
 stack-linkedlist: src/stack-linkedlist.c
-	gcc -o dist/stack-linkedlist stack-linkedlist.c
+	gcc -o dist/stack-linkedlist src/stack-linkedlist.c
 
 linkedlist: src/linkedlist.h src/linkedlist.c
-	gcc -o dist/linkedlist linkedlist.c
+	gcc -o dist/linkedlist src/linkedlist.c
 
 doublelinkedlist: src/doublelinkedlist.h src/doublelinkedlist.c
-	gcc -o doublelinkedlist doublelinkedlist.c
-
-binarySearchTree: src/binarySearchTree.h src/binarySearchTree.c
-	gcc -o binarySearchTree binarySearchTree.c
+	gcc -o doublelinkedlist src/doublelinkedlist.c
 
 xorll: src/xorll.h src/xorll.c
-	gcc -o xorll xorll.c
+	gcc -o xorll src/xorll.c
+
+circularlinkedlist:
+	gcc -o xorll src/xorll.c
+
+binarySearchTree: src/binarySearchTree.h src/binarySearchTree.c
+	gcc -o binarySearchTree src/binarySearchTree.c
 
 queue: src/queue.c
 	gcc -o queue queue.c
+
 
 clean:
 	rm dist/*
