--- a/C/Makefile
+++ b/C/Makefile
@@ -10,19 +10,19 @@ linkedlist: src/linkedlist.h src/linkedlist.c
 	gcc -o dist/linkedlist src/linkedlist.c
 
 doublelinkedlist: src/doublelinkedlist.h src/doublelinkedlist.c
-	gcc -o doublelinkedlist src/doublelinkedlist.c
+	gcc -o dist/doublelinkedlist src/doublelinkedlist.c
 
 xorll: src/xorll.h src/xorll.c
-	gcc -o xorll src/xorll.c
+	gcc -o dist/xorll src/xorll.c
 
-circularlinkedlist:
-	gcc -o xorll src/xorll.c
+circularlinkedlist: src/circularlinkedlist.h src/circularlinkedlist.c
+	gcc -o dist/circularlinkedlist src/circularlinkedlist.c
 
 binarySearchTree: src/binarySearchTree.h src/binarySearchTree.c
-	gcc -o binarySearchTree src/binarySearchTree.c
+	gcc -o dist/binarySearchTree src/binarySearchTree.c
 
 queue: src/queue.c
-	gcc -o queue queue.c
+	gcc -o dist/queue queue.c
 
 
 clean:
